set an explicit width/height on the image again to prevent layout shift

--- a/layout/format.css
+++ b/layout/format.css
@@ -77,6 +77,8 @@ figure {
 
 figure img {
     max-width: 100%;
+    height: auto;
+    aspect-ratio: attr(width) / attr(height);
 }
 
 figcaption {
